crates/compactp_diagnostics/src/snapshots/compactp_diagnostics__render__tests__render_human_colored.snap
---
source: crates/compactp_diagnostics/src/render.rs
expression: rendered
---
[1;31merror[E0012][0m[1m: expected `;`[0m
  --> test.compact:1:20
  |
1 | ledger count: Field
  |                    [1;31m^[0m expected `;`
  |
