crates/compactp_diagnostics/src/snapshots/compactp_diagnostics__render__tests__render_human_multiline_number_gutter.snap
---
source: crates/compactp_diagnostics/src/render.rs
expression: rendered
---
error[E0001]: unexpected token
   --> big.compact:11:6
   |
11 | abcdefghijklmnopqrstuvwxyz
   |      ^ unexpected token
   |
